## Chromium sysroot
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# This sysroot is used by github.com/vsco/bazel-toolchains.
http_archive(
    name = "org_chromium_sysroot_linux_x64",
    build_file_content = """
filegroup(
  name = "sysroot",
  srcs = glob(["*/**"]),
  visibility = ["//visibility:public"],
)
""",
    sha256 = "84656a6df544ecef62169cfe3ab6e41bb4346a62d3ba2a045dc5a0a2ecea94a3",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/2202c161310ffde63729f29d27fe7bb24a0bc540/debian_stretch_amd64_sysroot.tar.xz"],
)

## LLVM toolchain
bazel_dep(name = "toolchains_llvm", version = "v1.1.2")
git_override(
  module_name = "toolchains_llvm",
  commit = "1cd9e36e498983f061aa239e18043cfd26c7ac28",
  remote = "https://github.com/bazel-contrib/toolchains_llvm",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "15.0.6",
)

llvm.sysroot(
    name = "llvm_toolchain",
    label = "@org_chromium_sysroot_linux_x64//:sysroot",
    targets = ["linux-x86_64"],
)

use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

## Fuzzing rules
bazel_dep(name = "rules_fuzzing", version = "0.5.2")
non_module_dependencies = use_extension("@rules_fuzzing//fuzzing/private:extensions.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "rules_fuzzing_oss_fuzz")
